# mvpoliticalmap

./: readme.txt
colormapper/: CMakeLists.txt  colorFilter.cpp  main.cpp
politischekarte/: create_political_map.sh  index.html
politischekarte/geographical-lines/ne_110m_admin_0_countries_lakes/: dbfdump.txt  dump.txt  rawdbfdump.txt  shpdump.txt  sql-make.sh
politischekarte/js/: Circle.js  ClassStarfield.js  TextureSphere.js  getShaders.js
politischekarte/js/shader/: ColorShader2D_Frag.js  ColorShader2D_Vert.js  ColorShader3D_Frag.js  ColorShader3D_Vert.js  TextureShader3D_Frag.js  TextureShader3D_Vert.js  shader-3d-texture-vs.js
